1.02
   - bugfix: core::context: brik_init on first run only when it is not a base class Command

1.01 Sat Nov 22 17:05:46 CET 2014
   - UPDATE: brik_init: sets init_done Attribute only on success, must be called by subclass at the end
   - bugfix: metabrik: fix inheritance of Briks properties over class hierarchy, like setting default Attributes
   - bugfix: core::context: correctly stops run Commands in case brik_init has failed
   - bugfix: core::context: fix save_state and restore_state Commands return value on success
   - bugfix: core::shell: correctly handle current working directory
   - new: core::shell: pwd Command

1.00 Sun Nov 16 17:07:12 CET 2014
   - first public release
