@@ -155,6 +155,7 @@ sub usage {
 
 Usage: metabrik [options]
 
+   --script <file>       execute given script
    --no-splash           don't print the splash screen
    --rc <file>           use specified rc file (default: ~/.metabrik_rc)
    --verbose <0|1|2|3>   verbosity level (default: 2)
